Refactor some more, split out models into shared class library.

--- a/Strava_App/Strava_App.csproj
+++ b/Strava_App/Strava_App.csproj
@@ -10,6 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Strava.Data.Shared\Strava.Data.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.debug.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
