--- a/.gitignore
+++ b/.gitignore
@@ -348,4 +348,4 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
-/Strava_App/appsettings.debug.json
+/Strava.Data.Core/appsettings.debug.json
