--- a/Strava.Data.Wpf/Strava.Data.Wpf.csproj
+++ b/Strava.Data.Wpf/Strava.Data.Wpf.csproj
@@ -2,9 +2,13 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net5.0-windows10.0.18362.0</TargetFramework>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Esri.ArcGISRuntime.WPF" Version="100.12.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Strava.Data.Core\Strava.Data.Core.csproj" />
