Get web API up and working.

--- a/Strava.Data.Api/appsettings.json
+++ b/Strava.Data.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "Secret": "Jeff",
+    "Secret": "my name a jeff oh yes",
     "ClientId": 68897,
     "ClientSecret": "d44fd55269a547aab87364cedc65ec6abc0cd441",
     "ApiUrl": "https://www.strava.com/api/v3/",
