Add in leaflet to load up OpenStreetMap view, work on adding polyline to map.

--- a/Strava.Data.Ui/strava-data-ui/tsconfig.json
+++ b/Strava.Data.Ui/strava-data-ui/tsconfig.json
@@ -20,7 +20,8 @@
       "es2018",
       "dom"
     ],
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+    "types": ["node"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
@@ -28,5 +29,5 @@
     "strictInputAccessModifiers": true,
     "strictTemplates": true,
     "strictPropertyInitialization": false
-  }
+  },
 }
